# Backend

./: .aux.swp  .gitignore  .ps.swp  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 07ee0dfaa23c_아티클_엔티티에_문제_번호_어트리뷰트_추가_문제_번호로_검색_api까지.py  0d0e254d14ff_create_chapter_table.py  21667d34885d_create_users_table.py  33cdf8a60e59_create_images_table.py  3901996413e2_initial_migration.py  504f7dfdc525_create_images_table.py  6e45c5064c8d_create_image_table.py  7040e1efc9b4_create_chapter_table.py  8d7ee3556a55_initial_migration.py  905345ae99d3_image_table_수정.py  99ec830f2cf9_전체_백엔드_구조_마이그레이션.py  a3de849b1600_initial_migration.py  c2356e0dcec5_modify_image_table.py  cf46447b386d_create_images_table.py  d29db7d57aac_create_image_table.py  d87b522ac0e7_create_user_table.py  ed24b6c6f47e_엔티티들_추가.py
memory/: api.py  main.py
memory/app/chapter/: errors.py  models.py  service.py  store.py  views.py
memory/app/image/: models.py  service.py  store.py  views.py
memory/app/user/: errors.py  models.py  service.py  store.py  views.py
memory/common/: openai_service.py
memory/database/: annotation.py  connection.py  middleware.py  settings.py
mysol/: api.py  main.py
mysol/app/Blog/: views.py
mysol/app/User/: errors.py  service.py  views.py
mysol/app/article/: errors.py  models.py  service.py  store.py  views.py
mysol/app/blog/: errors.py  models.py  service.py  store.py  views.py
mysol/app/category/: errors.py  models.py  service.py  store.py  views.py
mysol/app/chapter/: models.py  service.py  views.py
mysol/database/: session.py  settings.py
(+66 files in other folders)
