[tool.poetry]
name = "mysol-backend"
version = "0.1.0"
description = "FastAPI Backend"
authors = ["SooinPark1019 <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mysol" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
sqlalchemy = ">=2.0.38,<3.0.0"
alembic = ">=1.14.1,<2.0.0"
pydantic = { extras = ["email"], version = ">=2.10.6,<3.0.0" }
python-dotenv = ">=1.0.1,<2.0.0"
passlib = { extras = ["bcrypt"], version = ">=1.7.4,<2.0.0" }
python-jose = { extras = ["cryptography"], version = ">=3.4.0,<4.0.0" }
mysql-connector-python = ">=9.2.0,<10.0.0"
starlette = ">=0.45.3,<0.46.0"
loguru = ">=0.7.3,<0.8.0"
itsdangerous = ">=2.2.0,<3.0.0"
pydantic-settings = ">=2.7.1,<3.0.0"
aiomysql = ">=0.2.0,<0.3.0"
pyjwt = ">=2.10.1,<3.0.0"
boto3 = "==1.36.23"
aioboto3 = ">=14.0.0,<15.0.0"
botocore = "==1.36.23"
python-multipart = ">=0.0.20,<0.0.21"
typing-extensions = ">=4.12.2,<5.0.0"
bcrypt = "<4.0.0"
openai = "^1.78.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
